// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <nav
    class="NavBar navbar navbar-expand navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <a
        aria-current="page"
        class="navbar-brand ms-2 active"
        href="/"
      >
        Jobly
      </a>
      <div
        class="collapse navbar-collapse"
        id="navbarColor01"
      >
        <ul
          class="navbar-nav ms-auto me-1"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/companies"
            >
              Companies
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/jobs"
            >
              Jobs
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/profile"
            >
              Profile
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              aria-current="page"
              class="nav-link active"
              href="/"
            >
              Logout testuser
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="NavBar navbar navbar-expand navbar-dark bg-primary"
  >
    <div
      class="container-fluid"
    >
      <a
        aria-current="page"
        class="navbar-brand ms-2 active"
        href="/"
      >
        Jobly
      </a>
      <div
        class="collapse navbar-collapse"
        id="navbarColor01"
      >
        <ul
          class="navbar-nav ms-auto me-1"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/login"
            >
              Login
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link"
              href="/signup"
            >
              Signup
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
